2015-01-05         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (EXTRA_DIST): Add errno.awk, errno.in, and errno.ok.
	(BASIC_TESTS): Add errno.
	(errno): New test.
	* errno.awk, errno.in, errno.ok: New files.

2014-12-24         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (badbuild): New test.
	* badbuild.awk, badbuild.in, badbuild.ok: New files.

2014-12-24         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (check): If tests don't pass, run 'make diffout'
	and exit 1. Should help distros to notice when they have built
	gawk incorrectly. (Can you say "Fedora", boys and girls?)

2014-12-12         Arnold D. Robbins     <arnold@skeeve.com>

	* profile5.ok: Updated after code changes.

2014-11-26         Arnold D. Robbins     <arnold@skeeve.com>

	* Gentests: Fix gensub call after adding warning.

2014-11-26         Arnold D. Robbins     <arnold@skeeve.com>

	* gensub2.ok: Update after code changes.

2014-11-16         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (sortglos): New test.
	* sortglos.awk, sortglos.in, sortglos.ok: New files.
	Thanks to Antonio Columbo.

2014-11-09         Arnold D. Robbins     <arnold@skeeve.com>

	* mbprintf4.awk: Add record and line number for debugging.
	* mpprint4.ok: Adjust.

2014-11-06         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* testext.ok: Add results from new test_get_file test.

2014-11-02         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (profile7): New test.
	(profile6): Add missing @ in front of gawk run.
	* profile7.awk, profile7.ok: New files.

2014-11-01         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (profile6): Actually run profiling. Should make test
	output consistent with what's in master.
	* profile6.ok: Updated.

2014-10-30         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (profile6): New test.
	* profile6.awk, profile6.ok: New files.
