@@ -1,5 +1,12 @@
 2015-01-05         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
+	* Makefile.am (EXTRA_DIST): Add timeout.awk and timeout.ok.
+	(BASIC_TESTS): Remove errno.
+	(GAWK_EXT_TESTS): Add errno and timeout.
+	* timeout.awk, timeout.ok: New files.
+
+2015-01-05         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
 	* Makefile.am (EXTRA_DIST): Add errno.awk, errno.in, and errno.ok.
 	(BASIC_TESTS): Add errno.
 	(errno): New test.
